# repobvn

./: .gitignore  README.md  SearchThread.h  SyncQueue.h  TryRa  Tryvis.py  abc.txt  run30.py
ArudinoExperiments/: TrafficLightSimulation.ino
CppIndiaCon2023_talk/barber/: CMakeLists.txt
CppIndiaCon2023_talk/barber/src/: AsyncOut.hpp  Barber.cpp  Barber.hpp  BarberShop.cpp  BarberShop.hpp  Customer.cpp  Customer.hpp  main.cpp
CppIndiaCon2023_talk/diningPhil/: CMakeLists.txt
CppIndiaCon2023_talk/diningPhil/src/: AsyncOut.hpp  ChopStick.hpp  DiningSurface.hpp  Display.hpp  Philosopher.cpp  Philosopher.hpp  Table.cpp  Table.hpp  main.cpp
CppIndiaCon2023_talk/reactorPattern/: AsyncOut.hpp  CMakeLists.txt  CloseExProm.cpp  CloseExSem.cpp  UvAsyncEx.cpp
CppIndiaCon2023_talk/reader-writer/: AsyncOut.hpp  CMakeLists.txt  ReaderWriter.cpp
Edan/: Checksum.cpp
GRAPH/: mainwindow.h  mainwindow.ui
GRAPH/qcustomplot/examples/build-plot-examples-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile
GRAPH/qcustomplot/examples/plots/: plot-examples.pro.user.0149829
LED application_wega_board/: sled.c
PatternSearchProblem/: .project  PatternSearchProblemDesc.docx  Psavesearch.cpp
Python_task/: block32.v  block32_equivalent.v  main.py
QT_weather/QtWeatherClient/: mainwindow.cpp
QThreads_example/: infinitecountworker.h  main.cpp  portablesleep.cpp
TestInC/InheritanceInC/: Makefile  student.c  student.h
TestInC/Polymorphism/: animal.c  animal.h  animal_p.h  cat.c
WordFrequencyProject/: .project  WorkerThread.cpp  WorkerThread.h  main.cpp
c/InheritanceInC/: help.txt  main.c  person.c  person.h
c/Misc/: IEEE754.txt  cheatsheet.txt  matrixEx.c  test.c
c/Polymorphism/: Makefile  cat.h  duck.c  duck.h  help.txt  main.c
chatbox/: chatbox.pro  chatbox.pro.user.18  mainwindow.h  publisher.cpp  subscriber.h
cpp/dsa/stack/: CMakeLists.txt  MinStack.cpp
cpp/interviewQ/: futureEx.cpp  reverseQ  reverseQ.cpp
cpp/projects/Scheduler/: ThreadPool.cpp  ThreadPool.hpp  main.cpp
cpp/projects/patternSearch/: .project  Psavesearch.cpp
cpp/projects/portable_Wavplayer/: audiobase.h  echo.cpp  master.h  sample.cpp
cpp/projects/portable_Wavplayer/Echo/: audiobase.cpp  echo.h  main.cpp  master.cpp  sample.h
cpp/projects/tk/: Task.cpp  Task.hpp  main.cpp
cpp/projects/wordFrequency/: .project  CMakeLists.txt  SearchThread.h  SyncQueue.cpp  WorkerThread.cpp  WorkerThread.h  main.cpp
cpp/projects/wordFrequencyProject/: SearchThread.cpp  SyncQueue.cpp  SyncQueue.h  WorkerThread.h
cpp/qt/qt_DDS/chatbox/: mainwindow.cpp  mainwindow.ui  publisher.h  subscriber.cpp
cpp/qt/qt_graph_ex/: GRAPH.pro  mainwindow.cpp
cpp/qt/qt_graph_ex/qcustomplot/examples/build-plot-examples-Desktop_Qt_5_7_0_GCC_64bit-Debug/: moc_qcustomplot.cpp
cpp/qt/qt_graph_ex/qcustomplot/examples/plots/: plot-examples.pro.user.0149829
cpp/qt/qt_threads_ex/: Th2.pro  infinitecountworker.cpp  mainwindow.cpp
cpp/qt/qt_weather/QtWeatherClient/: QtWeatherClient.pro  QtWeatherClient.pro.user.18  serversettingsdialog.cpp
cpp/qt/qt_weather/QtWeatherServer/network/: SocketServer.cpp
cpp/stl/Concurrency/: .goutputstream-P1N2Z1  .goutputstream-TUWC01  .goutputstream-UJD601  Blocking_bound_q_Ex.cpp  CMakeCache.txt  CMakeLists.txt  H2O_leet.cpp  blocked_queue_OT_error.cpp  cmake_install.cmake  customerToken.cpp  sch.cpp
cpp/stl/LinkU_cpp/: CMakeLists.txt
cpp/stl/Misc/: ComplexMapExample.cpp  KillEnemy.cpp  cStrlenCmp.cpp  trickyCharArray.cpp
cpp/stl/smartPtrs/: CMakeLists.txt  sharedPtrEx.cpp  sharedPtrinBD.cpp  uniquePtrEx.cpp  weakPtrEx.cpp
cpp/stl/vs_cpp_ex/: CMakeLists.txt  LamdaEx2.cpp.cpp  bitWiseOp.cpp  cToCppEx.cpp  cbEx.cpp  dequeEx.cpp  evenOdd.cpp  memBlockEx.cpp  moveConst.cpp  moveEx.cpp  mvEx.cpp  packageEx.cpp  reverseStr.cpp  shallowVsDeepCpy.cpp  shallowVsDeepSwap.cpp  stdmoveConst.cpp  strReplaceEx.cpp  val_isbn13.cpp  vectorEx.cpp
cpp11/: ComplexMapExample.cpp  KillEnemy.cpp  KillEnemy.cpp.txt
cpp17/Concurrency/: Blocking_bound_q_Ex.cpp  FooBar_leet.cpp  Makefile  atomic_counterEx.cpp  customerToken.cpp  main.cpp  sch.cpp
cpp17/LinkU_cpp/: CMakeLists.txt  Cpp.code-workspace  ExamSam2022.cpp
cpp17/Misc/: cStrStrImp.cpp  cStrlenCmp.cpp
cpp17/move semantics/: Tracker.cpp
cpp17/vs_cpp_ex/: BookModernCpp.cpp  CMakeLists.txt  assignOp.cpp  evenOdd.cpp  hSutterEx.cpp  lamdaEx.cpp  packageEx.cpp  strongTypeEx.cpp  stuEx.cpp  tempEx2.cpp  templateEx.cpp  test.cpp
embedded/: setup_rpi4_uboot_bb.txt  steps_rpi4_qemu.txt
embedded/ArudinoExperiments/: TrafficLightSimulation.ino
embedded/eLinux/: i2c_spi_ts.txt  patchEx.txt
portable_Wavplayer/Echo/: audiobase.cpp  audiobase.h  echo.cpp  echo.h  main.cpp  master.cpp  master.h  sample.cpp  sample.h
python/parser_verilog/: block32.v  block32_equivalent.v  main.py
